--- a/package.json
+++ b/package.json
@@ -63,15 +63,15 @@
     "@storybook/react": "^5.3.17",
     "@tailwindcss/ui": "^0.1.3",
     "autoprefixer": "9.7.4",
-    "babel-eslint": "10.1.0",
     "babel-loader": "^8.0.6",
     "cssnano": "4.1.10",
-    "eslint": "6.8.0",
-    "eslint-loader": "3.0.3",
-    "eslint-plugin-import": "2.20.1",
-    "eslint-plugin-react": "7.19.0",
-    "gatsby-plugin-eslint": "2.0.8",
-    "prettier": "1.19.1",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-loader": "^3.0.4",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.19.0",
+    "gatsby-plugin-eslint": "^2.0.8",
+    "prettier": "^2.0.2",
     "tailwindcss": "1.2.0"
   }
 }
